--- a/web/activities/index.html
+++ b/web/activities/index.html
@@ -23,7 +23,23 @@
 </style>
 <body >
 <div class="container">
-    <table id="table" class="table table-hover"></table>
+    <table id="table"
+           data-toolbar="#toolbar"
+           data-search="true"
+           data-show-refresh="true"
+           data-show-export="true"
+           data-detail-view="true"
+           data-detail-formatter="detailFormatter"
+           data-minimum-count-columns="2"
+           data-show-pagination-switch="true"
+           data-pagination="true"
+           data-id-field="id"
+           data-page-list="[10, 25, 50, 100, ALL]"
+           data-show-footer="false"
+           data-side-pagination="server"
+           data-url="/index.php?r=activities/getactivities"
+           data-response-handler="responseHandler">
+    </table>
 </div>
 </body>
 <script type="text/javascript"  src="/activities/js/index.js"></script>
