--- a/web/activities/index.html
+++ b/web/activities/index.html
@@ -27,6 +27,8 @@
            data-toolbar="#toolbar"
            data-search="true"
            data-show-refresh="true"
+           data-show-toggle="true"
+           data-show-columns="true"
            data-show-export="true"
            data-detail-view="true"
            data-detail-formatter="detailFormatter"
