--- a/web/activities/index.html
+++ b/web/activities/index.html
@@ -2,15 +2,13 @@
 <html lang="en-US">
 <head>
     <title></title>
-    <!-- 新 Bootstrap 核心 CSS 文件 -->
-    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
-    <!-- 可选的Bootstrap主题文件（一般不用引入） -->
-    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/public/js/bootstrap/css/bootstrap.min.css">
     <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+    <script src="/public/js/jquery/jquery.min.js"></script>
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-    <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/www/js/layer/layer.js"></script>
+    <script src="/public/js/bootstrap/js/bootstrap.min.js"></script>
+    <!--提示信息-->
+    <script type="text/javascript" src="/public/js/vue/vue.js"></script>
     <script src="/public/js/load/load.js"></script>
     <link rel="stylesheet" href="/public/js/bootstraptable/css/bootstrap-table.min.css">
     <!--<script src="assets/bootstrap2.3/js/bootstrap.min.js"></script>-->
