--- a/web/activities/details.html
+++ b/web/activities/details.html
@@ -36,7 +36,8 @@
            data-show-pagination-switch="true"
            data-pagination="true"
            data-id-field="id"
-           data-page-list="[10, 25, 50, 100, ALL]"
+           data-page-size="50"
+           data-page-list="[200,500,800,ALL]"
            data-show-footer="false"
            data-side-pagination="server"
            data-response-handler="responseHandler">
