--- a/web/activities/index.html
+++ b/web/activities/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" xmlns="http://www.w3.org/1999/html">
 <head>
     <title></title>
     <link rel="stylesheet" href="/public/js/bootstrap/css/bootstrap.min.css">
@@ -34,7 +34,7 @@
            data-show-pagination-switch="true"
            data-pagination="true"
            data-id-field="id"
-           data-page-list="[10, 25, 50, 100, ALL]"
+           data-page-list="[25, 50, 100, ALL]"
            data-show-footer="false"
            data-side-pagination="server"
            data-url="/index.php?r=activities/getactivities"
