--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,7 @@
                         <a href="/goods/goods/index.html">表白墙</a>
                     </li>
                     <li>
-                        <a href="/goods/goods/index.html">地图聊天</a>
+                        <a href="/mapchat/index.html">地图聊天</a>
                     </li>
                     <li>
                         <a href="/goods/goods/index.html">关于</a>
@@ -61,7 +61,6 @@
             </div>
         </div>
     </div>
-
 </nav><!--小导航条-->
 
 <div class="container" id = "width" style="margin-top: 73px;">
