--- a/web/personal/index.html
+++ b/web/personal/index.html
@@ -80,10 +80,10 @@
                         <a href="/goods/goods/index.html">完美市场</a>
                     </li>
                     <li>
-                        <a href="/goods/goods/index.html">表白墙</a>
+                        <a href="/goods/goods/index.html">地图聊天</a>
                     </li>
                     <li>
-                        <a href="/goods/goods/index.html">地图聊天</a>
+                        <a href="/activities/index.html">活动</a>
                     </li>
                     <li>
                         <a href="/goods/goods/index.html">关于</a>
