--- a/web/mapchat/index.html
+++ b/web/mapchat/index.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="/public/js/layer/layui/src/css/layui.css">
     <script src="/public/js/layer/layui/src/layui.js"></script>
 
+    <link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
+    <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=182c214f138010f919bbc41b72929cf3"></script>
+    <script type="text/javascript" src="http://cache.amap.com/lbs/static/addToolbar.js"></script>
+
 </head>
 <body>
 <nav  style="background: #55acee;" class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -59,6 +63,7 @@
 </nav><!--小导航条-->
 
 
+<div id="container" class="map" tabindex="0"></div>
 <!--<div class="site-demo-button">
     <button class="layui-btn site-demo-layim" data-type="chat">创造一个临时会话</button>
     <button class="layui-btn site-demo-layim" data-type="message">制造一个好友发过来的消息</button>
