修改导航兰

--- a/web/personal/index.html
+++ b/web/personal/index.html
@@ -17,7 +17,6 @@
     <!--弹出框 -->
     <link rel="stylesheet" type="text/css" href="/public/js/darktooltip/darktooltip.css">
     <script  src="/public/js/darktooltip/jquery.darktooltip.js"></script>
-    <link rel="stylesheet" href="/home/css/home.css">
     <script src="/public/js/load/load.js"></script>
 </head>
 <style>
@@ -65,46 +64,7 @@
 </style>
 <div id="homedata" >
 <body>
-<nav  style="background: #55acee;" class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div id="header" class="header">
-        <div class="head_center">
-            <div class="head_nav">
-                <ul>
-                    <li>
-                        <a href="/index.html"><img src="/home/icon/82046491831469223768e3609637d98c" width="90" style="margin-top: 0px;"></a>
-                    </li>
-                    <li>
-                        <a href="/personal/index.html">个人中心</a>
-                    </li>
-                    <li>
-                        <a href="/goods/goods/index.html">完美市场</a>
-                    </li>
-                    <li>
-                        <a href="/goods/goods/index.html">地图聊天</a>
-                    </li>
-                    <li>
-                        <a href="/activities/index.html">活动</a>
-                    </li>
-                    <li>
-                        <a href="/goods/goods/index.html">关于</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="head_login">
-                <ul class="login_nav">
-                    <li>
-                        <a href="login/index.html"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> 登录</a>
-                    </li>
-                    <li>
-                        <a href="home/index.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> 注册</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
-</nav><!--小导航条-->
-<div style="width: 100%;height: 350px; top: 65px; position: absolute;">
+<div style="width: 100%;height: 350px;position: absolute;">
     <img v-bind:src = informationData.backgroundImage width="100%" height="350">
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
