--- a/web/index.html
+++ b/web/index.html
@@ -21,22 +21,22 @@
             <div class="head_nav">
                 <ul>
                     <li>
-                        <a id ="home" href=""><img src="/home/icon/82046491831469223768e3609637d98c" width="90" style="margin-top: 0px;"></a>
+                        <a href="javascript:void(0)" onclick="home()"><img src="/home/icon/82046491831469223768e3609637d98c" width="90" style="margin-top: 0px;"></a>
                     </li>
                     <li>
                         <a href="javascript:void(0)" onclick="personal()">个人中心</a>
                     </li>
                     <li>
-                        <a href="/goods/goods/index.html">完美市场</a>
+                        <a href="#">完美市场</a>
                     </li>
                     <li>
-                        <a href="/goods/goods/index.html">表白墙</a>
+                        <a href="javascript:void(0)" onclick="activities()">活动</a>
                     </li>
                     <li>
                         <a href="javascript:void(0)" onclick="mapchat()">地图聊天</a>
                     </li>
                     <li>
-                        <a href="/goods/goods/index.html">关于</a>
+                        <a href="#">关于</a>
                     </li>
                 </ul>
             </div>
