--- a/web/index.html
+++ b/web/index.html
@@ -30,8 +30,14 @@
                         <a href="#">完美市场</a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)" onclick="activities()">活动</a>
+                        <a>活动</a>
+                        <ul class="submenu">
+                            <li><a href="javascript:void(0)" onclick="activities()">活动详情</a></li>
+                            <li><a href="javascript:void(0)" onclick="activities()">创建活动</a></li>
+                            <li><a href="javascript:void(0)" onclick="activities()">活动报名</a></li>
+                        </ul>
                     </li>
+
                     <li>
                         <a href="javascript:void(0)" onclick="mapchat()">地图聊天</a>
                     </li>
