--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,9 @@
     <script src="/public/js/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/home/css/home.css">
     <link rel="stylesheet" href="/home/css/index.css">
+    <script src="/public/js/load/load.js"></script>
+    <script type="text/javascript" src="/public/js/layer/layer.js"></script>
+
 </head>
 <body>
 <nav  style="background: #55acee;height: 80px;" class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -33,7 +36,7 @@
                         <a>活动</a>
                         <ul class="submenu">
                             <li><a href="javascript:void(0)" onclick="activities()">活动详情</a></li>
-                            <li><a href="javascript:void(0)" onclick="activities()">创建活动</a></li>
+                            <li><a href="javascript:void(0)" onclick="createactivities()">创建活动</a></li>
                             <li><a href="javascript:void(0)" onclick="activities()">活动报名</a></li>
                         </ul>
                     </li>
@@ -49,10 +52,10 @@
             <div class="head_login">
                 <ul class="login_nav">
                     <li>
-                        <a href="login/index.html"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> 登录</a>
+                        <a data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> 登录</a>
                     </li>
                     <li>
-                        <a href="home/index.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> 注册</a>
+                        <a data-toggle="modal" data-target="#registered"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> 注册</a>
                     </li>
                 </ul>
             </div>
@@ -62,7 +65,80 @@
 <div class="content">
     <iframe width="100%" height="100%"></iframe>
 </div>
-</body>
 <script type="text/javascript" src="/home/js/home.js"></script>
+</body>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="margin-top: 200px;">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="myModalLabel">登录</h4>
+            </div>
+            <div class="modal-body" style="margin-left: 125px;">
+                <div class="form-group">
+                    <input  class="form-control" id="inputEmail1" style="width: 300px;" placeholder="账号">
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" id="inputPassword1" style="width: 300px;" placeholder="密码">
+                </div>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox"> 记住我
+                    </label>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                <button type="button" id ="submit" class="btn btn-primary">登录</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="registered" tabindex="-1" role="dialog" aria-labelledby="myModalLabe" aria-hidden="true" style="margin-top: 100px;">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title">注册</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8">
+                        <form id="frmSearch">
+                            <select id = "provinces" name="provinces" class="form-control">
+                                <option>请选择</option>
+                            </select>
+                            <select style="margin-top:20px;" id = "school" name="school"class="form-control">
+                                <option>请选择</option>
+                            </select>
+                            <div class="form-group" style="margin-top:20px;">
+                                <input type="email" class="form-control" id="inputEmail" name="email" placeholder="邮箱">
+                            </div>
+                            <div class="form-group" style="margin-top:20px;">
+                                <input  class="form-control" id="nickname" name="nickname" placeholder="昵称字数个数（1-10)">
+                            </div>
+                            <div class="form-inline" style="margin-top:20px;">
+                                <select id = "year" name="year" class="form-control" style="width:90px;">
+                                </select>
+                                <select id = "mouth" name="mouth" class="form-control" style=" margin-left:20px; width:90px;">
+                                </select>
+                                <select id = "day" name="day" class="form-control" style=" margin-left:20px; width:90px;">
+                                </select>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-md-2"></div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                <button id = "registered" type="button"  class="btn btn-primary">注册</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 </html>
 
