--- a/web/registered/index.html
+++ b/web/registered/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 <head>
     <title></title>
+    <script type="text/javascript" src="/public/js/load/load.js"></script>
     <!-- 新 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
     <!-- 可选的Bootstrap主题文件（一般不用引入） -->
@@ -17,7 +18,7 @@
 </style>
 <body >
 <div class="row" style="margin: 0px;">
-    <div class="col-xs-8">image</div>
+    <div class="col-xs-4"></div>
     <div class="col-xs-4" style="margin-top:90px; width: 350px;">
         <form id="frmSearch">
             <select id = "provinces" name="provinces" class="form-control">
@@ -41,13 +42,12 @@
                 </select>
             </div>
             <div class="form-inline" style="margin-top:20px;">
-                <button id = "registered" type="button" class="btn btn-primary" style="margin-left:30px;width:80px;">注册</button>
-                <button id = "returnlogin" type="button" class="btn btn-primary" style="margin-left:100px; width:80px;">返回首页</button>
+                <button id = "registered" type="button" class="btn btn-primary" style="margin-left:120px;width:80px;">注册</button>
             </div>
         </form>
     </div>
 </div>
 </body>
-<script type="text/javascript" src="/www/themes/registered_index.js"></script>
+<script type="text/javascript" src="/registered/js/index.js"></script>
 </html>
 
