--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="/home/css/index.css">
     <script src="/public/js/load/load.js"></script>
     <script type="text/javascript" src="/public/js/layer/layer.js"></script>
+    <link rel="stylesheet" href="/public/js/upload/zyupload-1.0.0.min.css " type="text/css">
+    <script type="text/javascript" src="/public/js/upload/zyupload-1.0.0.min.js"></script>
 
 </head>
 <body>
@@ -24,7 +26,7 @@
             <div class="head_nav">
                 <ul>
                     <li>
-                        <a href="javascript:void(0)" onclick="home()"><img src="/home/icon/82046491831469223768e3609637d98c" width="90" style="margin-top: 0px;"></a>
+                        <a href="javascript:void(0)" onclick="home()"><span class="glyphicon glyphicon-send" style="font-size: 50px;" aria-hidden="true"></span></a>
                     </li>
                     <li>
                         <a href="javascript:void(0)" onclick="personal()">个人中心</a>
@@ -56,6 +58,9 @@
                     </li>
                     <li>
                         <a data-toggle="modal" data-target="#regist"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> 注册</a>
+                    </li>
+                    <li>
+                        <a data-toggle="modal" data-target="#posting"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> 发帖</a>
                     </li>
                 </ul>
             </div>
@@ -137,6 +142,22 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
                 <button id = "registered" type="button"  class="btn btn-primary">注册</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="posting" tabindex="-1" role="dialog" aria-labelledby="myModalLabe" aria-hidden="true" style="margin-top: 100px;">
+    <div class="modal-dialog" style="width: 652px;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title">撰写新动态</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div id="zyupload" class="zyupload"></div>
+                </div>
             </div>
         </div>
     </div>
