--- a/web/index.html
+++ b/web/index.html
@@ -54,13 +54,13 @@
             <div class="head_login">
                 <ul class="login_nav">
                     <li>
-                        <a data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> 登录</a>
+                        <a data-toggle="modal" data-target="#myModal" id="loginId"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> 登录</a>
                     </li>
                     <li>
-                        <a data-toggle="modal" data-target="#regist"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> 注册</a>
+                        <a data-toggle="modal" data-target="#regist" id="regis"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> 注册</a>
                     </li>
                     <li>
-                        <a data-toggle="modal" data-target="#posting"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> 发帖</a>
+                        <a data-toggle="modal" data-target="#posting" id="postingId"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> 发帖</a>
                     </li>
                 </ul>
             </div>
