--- a/web/index.html
+++ b/web/index.html
@@ -159,6 +159,9 @@
                     <div id="zyupload" class="zyupload"></div>
                 </div>
             </div>
+            <div class="modal-footer" style="display: none">
+                <button  id = "post" type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+            </div>
         </div>
     </div>
 </div>
