--- a/web/mapchat/test.html
+++ b/web/mapchat/test.html
@@ -13,7 +13,9 @@
 
 </head>
 <body>
+<div id="abc" style="width: 500px;height: 80px;">
 
+</div>
 <!--<div class="site-demo-button">
     <button class="layui-btn site-demo-layim" data-type="chat">创造一个临时会话</button>
     <button class="layui-btn site-demo-layim" data-type="message">制造一个好友发过来的消息</button>
@@ -26,9 +28,6 @@
 </div>-->
 
 <script>
-
-
-
 
     layui.use('layim', function(layim){
 
