--- a/web/home/index.html
+++ b/web/home/index.html
@@ -58,9 +58,9 @@
                                                 </button>
                                             </div>
                                             <div style="width:290px;height: 50px;left: 12px;top: 140px;position:absolute;">
-                                                <p style="font-size: 12px;line-height:15px; color: #292f33;" v-if="res.signature">
+                                                <span style="font-size: 12px;line-height:15px; color: #292f33;" >
                                                     {{res.signature}}
-                                                </p>
+                                                </span>
                                             </div>
 
                                             <div style="width:279px;height: 53px;top: 190px;position:absolute; padding-bottom: 10px;padding-left: 10px;padding-top: 10px;">
